--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
 <body>
     <header>
 
-        <div class="flex justify-between">
-            <img src="/images/R.png" alt="logo" class="w-[10%]">
+        <div class="flex items-center justify-between h-16">
+            <div>
+                <img src="/images/R.png" alt="logo" class="w-[10%]">
+            </div>
 
 
             <div class="flex">
